# rcj_2024

./: README.md  main.c
camera/: black.py  i2c.py  serch.py
memo/: memo.txt
movement/: linetrace.c  onofflinetrace1.c  serch.c
pico_test/: CMakeLists.txt  main.c  test_01.c
pico_test/lib/: CMakeLIsts.txt  CMakeLists.txt  debug.h  mcp3208.h  servo.h  stepper.h  tof.c  tof.h
pico_test/lib/LiDAR/: CMakeLists.txt  LiDAR.cpp  LiDAR.h
pico_test/lib/LiDAR/Pico-VL53L0X/: CMakeLists.txt  Pico_VL53L0X.cpp  Pico_VL53L0X.h  vl53l0x_i2c_platform.h  vl53l0x_platform.h
pico_test/lib/LiDAR/Pico-VL53L0X/platform/src/: vl53l0x_i2c_comms.cpp
pico_test/lib/camera/: CMakeLists.txt  camera.c  camera.h
pico_test/lib/debagu/: CMakeLists.txt  debagu.c  debagu.h
pico_test/lib/mcp3208/: CMakeLists.txt  mcp3208.c  mcp3208.h
pico_test/lib/servo/: CMakeLists.txt  servo.c  servo.h
pico_test/lib/stepper/: CMakeLists.txt  stepper.c  stepper.h
pico_test/lib/tof/: CMakeLists.txt  tof.c  tof.h
pico_test/main/: CMakeLists.txt  debug  main.c
pico_test2/: CMakeLists.txt
